flvmux: Set PTS based on running time

https://bugzilla.gnome.org/show_bug.cgi?id=793457